# mail_client

./: .gitignore  README.md  pre-commit-config.yaml  pyproject.toml  requirements.txt
research/: need_update.md  reference_card.md  ssl_trobleshoot.md
src/mail_client/: __init__.py  email_tags.json  gui_main.py  mail_client.py  mail_client_app.py  main.py  ssl_test.py  test_popsslcipher.py
